Revert "fix: address book action button alignment when cancel is hidden (#10976)"
This reverts commit 3bbc2bad39e6673b336ebb1b191ace644e640d29.

--- a/projects/storefrontstyles/scss/components/checkout/steps/shipping-address/_address-form.scss
+++ b/projects/storefrontstyles/scss/components/checkout/steps/shipping-address/_address-form.scss
@@ -2,8 +2,4 @@
 
 %cx-address-form {
   @include checkout-media-style();
-
-  .action-btns {
-    padding: 1rem 0;
-  }
 }
